--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!---Bootstrap 5-->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
+    <!--CSS-->
+    <link rel="stylesheet" href="../css/style.css" />
+    <title>Formulário Senac-RS | NodeJS</title>
   </head>
-  <body>
-    <h1>Hello World</h1>
+  <body class="min-vw-100 min-vh-100 overflow-hidden">
+    <header>
+      <nav
+        class="navbar navbar-expand-lg bg-body-tertiary w-100 d-flex align-items-center"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img
+              src="https://api.senacrs.com.br/bff/site-senac/v1/file/078f143692e591ec20623efea089cdf3d19a24.png"
+              alt="logo"
+              height="45px"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link link-primary active"
+                  aria-current="page"
+                  href="#"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link-primary" href="./contact.html"
+                  >Contato</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link-primary" href="./about.html">Sobre</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main class="min-vw-100 min-vh-100">
+      <h1 class="text-center text-primary fw-bolder mt-5 mb-5">
+        Formulário de cadastro
+      </h1>
+      <div class="container w-100 h-100">
+        <form action="">
+          <div class="mb-3">
+            <label for="nameInput" class="form-label">Nome</label>
+            <input
+              type="text"
+              class="form-control form-control-lg w-50"
+              id="nameInput"
+              placeholder="Informe seu nome completo"
+              required
+            />
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">E-mail</label>
+            <input
+              type="email"
+              class="form-control form-control-lg w-50"
+              id="email"
+              placeholder="example@gmail.com"
+              required
+            />
+          </div>
+          <button type="submit" class="btn btn-outline-primary">Enviar</button>
+        </form>
+      </div>
+    </main>
+    <!--Bootstrap 5 js-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
