--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,12 +59,14 @@
         </div>
       </nav>
     </header>
-    <main class="min-vw-100 min-vh-100">
+    <main class="w-100 h-100">
       <h1 class="text-center text-primary fw-bolder mt-5 mb-5">
         Formulário de cadastro
       </h1>
-      <div class="container w-100 h-100">
-        <form action="">
+      <div
+        class="container w-100 h-100 d-flex align-items-center justify-content-center flex-collum"
+      >
+        <form action="" class="w-100 h-100">
           <div class="mb-3">
             <label for="nameInput" class="form-label">Nome</label>
             <input
