--- a/frontend/about.html
+++ b/frontend/about.html
@@ -1,11 +1,105 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="w-100 h-100">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
     <title>Sobre</title>
   </head>
-  <body>
-    <h1>Sobre</h1>
+  <body class="w-100 h-100 overflow-hidden">
+    <header>
+      <nav
+        class="navbar navbar-expand-lg bg-body-tertiary w-100 d-flex align-items-center"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img
+              src="https://api.senacrs.com.br/bff/site-senac/v1/file/078f143692e591ec20623efea089cdf3d19a24.png"
+              alt="logo"
+              height="45px"
+            />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link link-primary active"
+                  aria-current="page"
+                  href="index.html"
+                  >Home</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link-primary" href="./contact.html"
+                  >Contato</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link-primary" href="./about.html">Sobre</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <div
+      class="container d-flex flex-collum align-items-center justify-content-center"
+    >
+      <h1 class="mt-5 mb-5 text-center fs-1 fw-bold text-primary">Sobre nós</h1>
+    </div>
+    <hr class="border border-primary border-3 opacity-75" />
+    "/>
+    <div class="container container-fluid mb-2">
+      <p class="fs-4 fw-300" style="text-align: justify">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
+        sequi labore velit iusto eaque? Minima molestiae quam dolor minus, neque
+        perferendis quae assumenda quas repellat dicta at omnis error iure?
+        Delectus maiores explicabo est, culpa ipsa, odio cumque nemo repudiandae
+        sed nobis, illum hic reiciendis illo possimus sequi officiis aliquid
+        dolorum suscipit! Voluptatum obcaecati animi officia vel dolorem harum
+        saepe. Aspernatur ut commodi dolores fugit rem ratione eos obcaecati
+        inventore molestiae optio sunt magnam iste aliquam sed, dicta saepe,
+        dolorem, cupiditate debitis earum veniam temporibus architecto
+        perspiciatis? Qui, reiciendis laudantium? Blanditiis vitae corrupti quas
+        ad obcaecati delectus officia iure, quod expedita fugiat facilis sequi
+        voluptatibus eveniet nobis velit libero? Nulla ab labore atque quidem
+        tempora nostrum, iusto corrupti voluptates quaerat. Cumque laborum
+        reiciendis molestiae iure iusto iste, maiores ab, perspiciatis,
+        doloremque saepe exercitationem temporibus eveniet! Corporis minima
+        debitis omnis suscipit illo cum voluptas, iusto, optio fuga dolor qui ut
+        dolore! Id quo et qui dolorem accusamus sapiente amet voluptates rem
+        aliquid error a impedit odio ipsum quas, ut, eligendi animi, sit
+        repudiandae incidunt facilis ea officia doloribus. Inventore, nihil
+        nulla. Magnam voluptatum sapiente rerum ipsum tenetur ullam culpa eaque
+        veniam iste, aperiam nihil est officia veritatis impedit numquam commodi
+        iusto fugiat ducimus vel, voluptates quo optio eius dignissimos nulla!
+        Aperiam. Animi itaque asperiores neque fuga incidunt velit mollitia
+        adipisci veniam. Accusantium, commodi officiis officia aliquam
+        laudantium porro harum, esse nemo illo veniam dolores, dicta ex. Labore
+        vero sapiente a consequuntur. Voluptate molestiae dolorum quis
+        consequuntur veniam odit nemo blanditiis sit reprehenderit fugiat
+        tempora harum aliquam unde nisi adipisci aperiam officiis enim, rerum
+        quos beatae incidunt? Reiciendis itaque minima corporis ut. Quibusdam,
+        tempore consectetur quis neque saepe aperiam? Necessitatibus quas iure
+        repellat corrupti, molestias debitis aut animi hic saepe ducimus
+        sapiente rem, exercitationem suscipit totam facilis sequi beatae rerum
+        maiores quia.
+      </p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
