--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,7 +61,7 @@
     </header>
     <main class="w-100 h-100">
       <h1 class="text-center text-primary fw-bolder mt-5 mb-5">
-        Formulário de cadastro
+        Comanda de consumo Oktoberfest
       </h1>
       <div
         class="container w-100 h-100 d-flex align-items-center justify-content-center flex-collum"
