fix navbar href

--- a/frontend/receipt.html
+++ b/frontend/receipt.html
@@ -50,7 +50,7 @@
                   <a
                     class="nav-link link-primary active"
                     aria-current="page"
-                    href="#"
+                    href="./index.html"
                     >Home</a
                   >
                 </li>
